# django-graphql-benchmarks

./: db.sqlite3  pyproject.toml
benchmarks/: dashboard.py  drf.js  format-results.py  graphene.js  json.js  run-benchmarks.sh  strawberry-dict.js  strawberry.js
data/: download-data.py
graphene_api/: schema.py
json_api/: views.py
main/: settings.py  urls.py
movies/migrations/: 0002_auto_20210822_1225.py
strawberry_api/: schema.py  views.py
strawberry_dict_api/: schema.py
